styles: update theme colors

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             </li>
           </ul>
           <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-primary">Download CV</button>
+            <button type="button" class="btn btn-info">Download CV</button>
           </div>
         </header>
 
@@ -233,7 +233,7 @@
     <!-- Tech Stack Atom Section -->
     <section class="container py-5">
 
-        <h2 class="display-5 my-5 text-center">¿Qué puedo aportar a su equipo?</h2>
+        <h2 class="display-5 my-5 text-center text-info text-glow">¿Qué puedo aportar a su equipo?</h2>
 
       <div class="row justify-content-md-between py-5">
         <div class="col-12 col-md-6">
@@ -324,7 +324,7 @@
         <div class="row g-4">
           <div class="col-lg-4 col-md-6">
             <div
-              class="tilt-card card h-100 border-0 shadow transition-hover"
+              class="tilt-card spotlight-card card h-100 border-0 shadow transition-hover"
               data-aos="fade-up"
             >
               <div class="card-body p-4">
@@ -370,7 +370,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div
-              class="tilt-card card h-100 border-0 shadow transition-hover"
+              class="tilt-card spotlight-card card h-100 border-0 shadow transition-hover"
               data-aos="fade-up"
             >
               <div class="card-body p-4">
@@ -418,7 +418,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div
-              class="tilt-card card h-100 border-0 shadow transition-hover"
+              class="tilt-card spotlight-card card h-100 border-0 shadow transition-hover"
               data-aos="fade-up"
             >
               <div class="card-body p-4">
@@ -475,7 +475,7 @@
       class="col-6 d-flex flex-column align-items-center justify-content-center p-5"
     >
       <h2 class="display-3 text-center mb-5">Recent works</h2>
-      <article class="card shadow text-white border-0 w-100">
+      <article class="spotlight-card card shadow text-white border-0 w-100">
         <div
           class="card-header bg-transparent border-0 d-flex gap-2 justify-content-end pt-3 pb-0"
         >
@@ -498,7 +498,7 @@
     </div>
 
     <div class="col-6 p-5">
-      <article class="card shadow text-white border-0 w-100 mb-5">
+      <article class="spotlight-card card shadow text-white border-0 w-100 mb-5">
         <div
           class="card-header bg-transparent border-0 d-flex gap-2 justify-content-end pt-3 pb-0"
         >
@@ -519,7 +519,7 @@
         />
       </article>
 
-      <article class="card shadow text-white border-0 w-100">
+      <article class="spotlight-card card shadow text-white border-0 w-100">
         <div
           class="card-header bg-transparent border-0 d-flex gap-2 justify-content-end pt-3 pb-0"
         >
